--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -1000,10 +1000,10 @@
             </objects>
             <point key="canvasLocation" x="3600.8000000000002" y="-1834.6326836581711"/>
         </scene>
-        <!--My Sample List Controller-->
+        <!--My Show Room List Controller-->
         <scene sceneID="Ysj-Ga-I92">
             <objects>
-                <viewController storyboardIdentifier="MySampleListController" id="gcc-yL-5Bm" customClass="MySampleListController" customModule="SalesEdge" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MyShowRoomListController" id="gcc-yL-5Bm" customClass="MyShowRoomListController" customModule="SalesEdge" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ou3-fG-0cT">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
