--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -1315,6 +1315,100 @@
             </objects>
             <point key="canvasLocation" x="1476" y="-1813"/>
         </scene>
+        <!--My Sample List View Controller-->
+        <scene sceneID="Iim-Le-Wfe">
+            <objects>
+                <viewController storyboardIdentifier="MySampleListViewController" id="FSV-c2-JpA" customClass="MySampleListViewController" customModule="SalesEdge" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cbN-CF-GeU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iQJ-vk-s1Q">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="148" id="7ef-zR-cQq" customClass="CustomTableCellView" customModule="SalesEdge" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="148"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7ef-zR-cQq" id="8KO-ta-nae">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="147.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Zi-k6-dag">
+                                                    <rect key="frame" x="15" y="11" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="5QD-WI-S5k"/>
+                                                        <constraint firstAttribute="width" constant="60" id="f7b-ri-CYT"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" text="Label111" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Vz-XP-07T">
+                                                    <rect key="frame" x="83" y="21" width="292" height="100"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ul4-Hz-mtE">
+                                                    <rect key="frame" x="331.5" y="11" width="28.5" height="13.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Upt-nP-7cl">
+                                                    <rect key="frame" x="83" y="121" width="277" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="4Vz-XP-07T" firstAttribute="top" secondItem="8KO-ta-nae" secondAttribute="topMargin" constant="10" id="0Kh-ZV-sR8"/>
+                                                <constraint firstItem="Upt-nP-7cl" firstAttribute="leading" secondItem="4Vz-XP-07T" secondAttribute="leading" id="0SA-Aj-TSV"/>
+                                                <constraint firstItem="Upt-nP-7cl" firstAttribute="top" secondItem="4Vz-XP-07T" secondAttribute="bottom" id="3rh-ye-00B"/>
+                                                <constraint firstAttribute="trailing" secondItem="4Vz-XP-07T" secondAttribute="trailing" id="GZ5-6u-heq"/>
+                                                <constraint firstItem="8Zi-k6-dag" firstAttribute="top" secondItem="8KO-ta-nae" secondAttribute="topMargin" id="JGv-xs-phY"/>
+                                                <constraint firstItem="Ul4-Hz-mtE" firstAttribute="trailing" secondItem="8KO-ta-nae" secondAttribute="trailingMargin" id="JT5-xh-cPh"/>
+                                                <constraint firstItem="4Vz-XP-07T" firstAttribute="leading" secondItem="8Zi-k6-dag" secondAttribute="trailing" constant="8" id="KF5-oi-zmy"/>
+                                                <constraint firstItem="8Zi-k6-dag" firstAttribute="leading" secondItem="8KO-ta-nae" secondAttribute="leadingMargin" id="eK8-Vu-fJN"/>
+                                                <constraint firstItem="Upt-nP-7cl" firstAttribute="top" secondItem="4Vz-XP-07T" secondAttribute="bottom" id="lTA-ko-DPD"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Upt-nP-7cl" secondAttribute="trailing" id="lxH-1M-0Vw"/>
+                                                <constraint firstItem="Upt-nP-7cl" firstAttribute="leading" secondItem="8KO-ta-nae" secondAttribute="leadingMargin" constant="68" id="ouE-O0-lxv"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Upt-nP-7cl" secondAttribute="bottom" id="pBc-Eb-0Vz"/>
+                                                <constraint firstItem="Ul4-Hz-mtE" firstAttribute="top" secondItem="8KO-ta-nae" secondAttribute="topMargin" id="s1R-We-FTf"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="8Zi-k6-dag" secondAttribute="bottom" constant="8" id="vVl-Of-oh8"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="mImage" destination="8Zi-k6-dag" id="JEC-PV-0WW"/>
+                                            <outlet property="mTxtLabel" destination="4Vz-XP-07T" id="cVL-Wp-qYW"/>
+                                            <outlet property="mTxtSubTitle" destination="Upt-nP-7cl" id="byR-ik-SQD"/>
+                                            <outlet property="mTxtTimestamp" destination="Ul4-Hz-mtE" id="Hhr-ft-WLi"/>
+                                            <segue destination="M4c-Hb-CIy" kind="presentation" identifier="show_sample_detail" id="Lod-K2-e7i"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="FSV-c2-JpA" id="Lv9-dP-0TE"/>
+                                    <outlet property="delegate" destination="FSV-c2-JpA" id="jFr-uf-z3Q"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="iQJ-vk-s1Q" firstAttribute="top" secondItem="UhE-IA-EVe" secondAttribute="top" id="NNF-JQ-3eN"/>
+                            <constraint firstItem="iQJ-vk-s1Q" firstAttribute="bottom" secondItem="UhE-IA-EVe" secondAttribute="bottom" id="fNp-QI-hxJ"/>
+                            <constraint firstItem="iQJ-vk-s1Q" firstAttribute="leading" secondItem="UhE-IA-EVe" secondAttribute="leading" id="wII-yD-AWH"/>
+                            <constraint firstItem="UhE-IA-EVe" firstAttribute="trailing" secondItem="iQJ-vk-s1Q" secondAttribute="trailing" id="wjm-M7-lMV"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="UhE-IA-EVe"/>
+                    </view>
+                    <connections>
+                        <outlet property="mTableView" destination="iQJ-vk-s1Q" id="JAc-fp-ve1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="775-0P-YA9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1281" y="-3437"/>
+        </scene>
         <!--Sample-->
         <scene sceneID="TjE-Z9-Kxj">
             <objects>
@@ -1399,4 +1493,7 @@
         <image name="qrcode-scan" width="24" height="24"/>
         <image name="qrcode-scan-multi" width="40" height="40"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Lod-K2-e7i"/>
+    </inferredMetricsTieBreakers>
 </document>
