--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -763,24 +763,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YOR-uG-067">
-                                <rect key="frame" x="327" y="621" width="32" height="30"/>
-                                <state key="normal" title="OCR"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YOR-uG-067">
+                                <rect key="frame" x="335" y="627" width="24" height="24"/>
+                                <state key="normal" image="ocr"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LTa-fM-LYA">
-                                <rect key="frame" x="329" y="583" width="30" height="30"/>
-                                <state key="normal" title="Q R"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LTa-fM-LYA">
+                                <rect key="frame" x="335" y="595" width="24" height="24"/>
+                                <state key="normal" image="qrcode-scan"/>
                                 <connections>
                                     <segue destination="X1Y-H0-HV2" kind="presentation" identifier="scan_qr_code" id="2i8-t7-Wux"/>
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gMk-lc-AGr">
-                                <rect key="frame" x="16" y="523" width="303" height="128"/>
+                                <rect key="frame" x="16" y="523" width="311" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="8cq-B9-9Tg"/>
                                 </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <userDefinedRuntimeAttributes>
@@ -794,6 +793,9 @@
                                         <real key="value" value="1"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outlet property="delegate" destination="bTO-wv-w4X" id="tXf-Ym-B1V"/>
+                                </connections>
                             </textView>
                             <imageView contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_image" translatesAutoresizingMaskIntoConstraints="NO" id="EDO-ND-eXP">
                                 <rect key="frame" x="0.0" y="20" width="375" height="495"/>
@@ -801,6 +803,12 @@
                                     <outletCollection property="gestureRecognizers" destination="ukz-vr-ZwE" appends="YES" id="fxh-aL-jYa"/>
                                 </connections>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Subject Here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xvi-6C-Vld">
+                                <rect key="frame" x="24" y="531" width="114.5" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -808,6 +816,7 @@
                             <constraint firstItem="hEM-nR-aWg" firstAttribute="bottom" secondItem="YOR-uG-067" secondAttribute="bottom" constant="16" id="2z6-Il-AY3"/>
                             <constraint firstItem="gMk-lc-AGr" firstAttribute="top" secondItem="EDO-ND-eXP" secondAttribute="bottom" constant="8" id="3DZ-NL-DfS"/>
                             <constraint firstItem="gMk-lc-AGr" firstAttribute="leading" secondItem="hEM-nR-aWg" secondAttribute="leading" constant="16" id="F3Y-3x-P6I"/>
+                            <constraint firstItem="xvi-6C-Vld" firstAttribute="leading" secondItem="gMk-lc-AGr" secondAttribute="leading" constant="8" id="FH6-gH-YG1"/>
                             <constraint firstItem="EDO-ND-eXP" firstAttribute="top" secondItem="hEM-nR-aWg" secondAttribute="top" id="GgR-dL-5H7"/>
                             <constraint firstItem="YOR-uG-067" firstAttribute="top" secondItem="LTa-fM-LYA" secondAttribute="bottom" constant="8" id="U4p-vz-ZoS"/>
                             <constraint firstItem="EDO-ND-eXP" firstAttribute="leading" secondItem="hEM-nR-aWg" secondAttribute="leading" id="hJi-li-qwk"/>
@@ -815,10 +824,12 @@
                             <constraint firstItem="hEM-nR-aWg" firstAttribute="trailing" secondItem="LTa-fM-LYA" secondAttribute="trailing" constant="16" id="o3D-Kw-YH0"/>
                             <constraint firstItem="YOR-uG-067" firstAttribute="leading" secondItem="gMk-lc-AGr" secondAttribute="trailing" constant="8" id="s0r-P6-hX0"/>
                             <constraint firstItem="hEM-nR-aWg" firstAttribute="bottom" secondItem="gMk-lc-AGr" secondAttribute="bottom" constant="16" id="tFc-V5-Jin"/>
+                            <constraint firstItem="xvi-6C-Vld" firstAttribute="top" secondItem="gMk-lc-AGr" secondAttribute="top" constant="8" id="tkw-in-jXE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hEM-nR-aWg"/>
                     </view>
                     <connections>
+                        <outlet property="mCustomerHint" destination="xvi-6C-Vld" id="x5Z-IC-d7l"/>
                         <outlet property="mImage" destination="EDO-ND-eXP" id="YyZ-5d-jd7"/>
                         <outlet property="mTxtCustomer" destination="gMk-lc-AGr" id="CIV-2S-MvH"/>
                     </connections>
@@ -1468,7 +1479,7 @@
                                     <action selector="onSaveTouch:" destination="emq-0B-plV" id="kEd-c1-tVp"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem title="Pick" id="Ihj-Uo-fiI">
+                            <barButtonItem systemItem="add" id="Ihj-Uo-fiI">
                                 <connections>
                                     <segue destination="R3V-UH-qy2" kind="show" identifier="show_pick" id="jYD-JD-lke"/>
                                 </connections>
@@ -1510,6 +1521,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="lQL-al-B4s"/>
-        <segue reference="Fa7-hu-ity"/>
+        <segue reference="2i8-t7-Wux"/>
     </inferredMetricsTieBreakers>
 </document>
