red flag to upload

--- a/SalesEdge/Base.lproj/Main.storyboard
+++ b/SalesEdge/Base.lproj/Main.storyboard
@@ -1355,6 +1355,14 @@
                                                         <constraint firstAttribute="width" constant="60" id="f7b-ri-CYT"/>
                                                     </constraints>
                                                 </imageView>
+                                                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jbe-dh-AIY">
+                                                    <rect key="frame" x="69" y="7" width="10" height="10"/>
+                                                    <color key="backgroundColor" red="1" green="0.0" blue="0.056107677719999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="10" id="4dQ-yX-ebp"/>
+                                                        <constraint firstAttribute="width" constant="10" id="Wgb-OZ-Zli"/>
+                                                    </constraints>
+                                                </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" text="Label111" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Vz-XP-07T">
                                                     <rect key="frame" x="83" y="21" width="292" height="100"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -1378,10 +1386,12 @@
                                                 <constraint firstItem="4Vz-XP-07T" firstAttribute="top" secondItem="8KO-ta-nae" secondAttribute="topMargin" constant="10" id="0Kh-ZV-sR8"/>
                                                 <constraint firstItem="Upt-nP-7cl" firstAttribute="leading" secondItem="4Vz-XP-07T" secondAttribute="leading" id="0SA-Aj-TSV"/>
                                                 <constraint firstItem="Upt-nP-7cl" firstAttribute="top" secondItem="4Vz-XP-07T" secondAttribute="bottom" id="3rh-ye-00B"/>
+                                                <constraint firstItem="Jbe-dh-AIY" firstAttribute="trailing" secondItem="8Zi-k6-dag" secondAttribute="trailing" constant="4" id="AfE-j0-RH6"/>
                                                 <constraint firstAttribute="trailing" secondItem="4Vz-XP-07T" secondAttribute="trailing" id="GZ5-6u-heq"/>
                                                 <constraint firstItem="8Zi-k6-dag" firstAttribute="top" secondItem="8KO-ta-nae" secondAttribute="topMargin" id="JGv-xs-phY"/>
                                                 <constraint firstItem="Ul4-Hz-mtE" firstAttribute="trailing" secondItem="8KO-ta-nae" secondAttribute="trailingMargin" id="JT5-xh-cPh"/>
                                                 <constraint firstItem="4Vz-XP-07T" firstAttribute="leading" secondItem="8Zi-k6-dag" secondAttribute="trailing" constant="8" id="KF5-oi-zmy"/>
+                                                <constraint firstItem="Jbe-dh-AIY" firstAttribute="top" secondItem="8Zi-k6-dag" secondAttribute="top" constant="-4" id="VZj-yT-Uft"/>
                                                 <constraint firstItem="8Zi-k6-dag" firstAttribute="leading" secondItem="8KO-ta-nae" secondAttribute="leadingMargin" id="eK8-Vu-fJN"/>
                                                 <constraint firstItem="Upt-nP-7cl" firstAttribute="top" secondItem="4Vz-XP-07T" secondAttribute="bottom" id="lTA-ko-DPD"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="Upt-nP-7cl" secondAttribute="trailing" id="lxH-1M-0Vw"/>
@@ -1393,6 +1403,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="mImage" destination="8Zi-k6-dag" id="JEC-PV-0WW"/>
+                                            <outlet property="mRedFlag" destination="Jbe-dh-AIY" id="FA2-H0-iwS"/>
                                             <outlet property="mTxtLabel" destination="4Vz-XP-07T" id="cVL-Wp-qYW"/>
                                             <outlet property="mTxtSubTitle" destination="Upt-nP-7cl" id="byR-ik-SQD"/>
                                             <outlet property="mTxtTimestamp" destination="Ul4-Hz-mtE" id="Hhr-ft-WLi"/>
@@ -1520,7 +1531,7 @@
         <image name="qrcode-scan-multi" width="40" height="40"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="lQL-al-B4s"/>
+        <segue reference="Lod-K2-e7i"/>
         <segue reference="2i8-t7-Wux"/>
     </inferredMetricsTieBreakers>
 </document>
